# EEET2482-COSC2082---Group-Assignment

./: CMakeLists.txt  Data.cpp  Guest.h  House.cpp  a.out  house.cpp  house.h  main.cpp
Data/: Houses.csv
EEET2482-COSC2082---Group-Assignment-main/: README.md
EEET2482-COSC2082---Group-Assignment-main/src/: Admin.h  CMakeLists.txt  Data.cpp  Data.h  House.cpp  House.h  Member.cpp  Member.h  User.cpp  User.h  main.cpp  tempCodeRunnerFile.cpp  testing.cpp
EEET2482-COSC2082---Group-Assignment-main/src/Data/: Houses.csv  Members.csv
Group_Project/: Admin.cpp  Admin.h  CMakeLists.txt  Data.cpp  Data.h  Guest.cpp  Guest.h  House.cpp  House.h  Member.cpp  Member.h  User.cpp  User.h  a.out  main.cpp
Group_Project/Data/: Houses.csv  Members.csv
src/: Admin.cpp  Admin.h  Data.cpp  Data.h  House.cpp  House.h  Member.cpp  Member.h  User.h  house.cpp  house.h  main.cpp
